force-app/main/default/objects/Claim__c/Claim__c.object-meta.xml
<CustomObject>
    <description>Stores individual workers&apos; compensation claims</description>
    <label>Claim</label>
    <nameField>
        <displayFormat>WC-{YYYY}-{000}</displayFormat>
        <label>Claim Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Claims</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>