force-app/main/default/objects/Claim__c/fields/Date_Filed__c.field-meta.xml
<CustomField>
    <fullName>Date_Filed__c</fullName>
    <description>date the claim was submitted</description>
    <inlineHelpText>date the claim was submitted</inlineHelpText>
    <label>Date Filed</label>
    <required>true</required>
    <type>Date</type>
</CustomField>