force-app/main/default/objects/Claim__c/fields/Days_Open__c.field-meta.xml
<CustomField>
    <fullName>Days_Open__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Days Open</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>