force-app/main/default/objects/Claim__c/fields/Incident_Date__c.field-meta.xml
<CustomField>
    <fullName>Incident_Date__c</fullName>
    <description>date the workplace incident occurred</description>
    <inlineHelpText>date the workplace incident occurred</inlineHelpText>
    <label>Incident Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>