force-app/main/default/objects/Claim__c/fields/Insurance_Provider__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>the insurance company handling this claim</description>
    <inlineHelpText>the insurance company handling this claim</inlineHelpText>
    <label>Insurance Provider</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Claims</relationshipLabel>
    <relationshipName>Claims</relationshipName>
    <type>Lookup</type>
</CustomField>