force-app/main/default/objects/Claim__c/fields/Is_High_Value__c.field-meta.xml
<CustomField>
    <fullName>Is_High_Value__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is High Value</label>
    <type>Checkbox</type>
</CustomField>