force-app/main/default/objects/Claim__c/fields/Settlement_Amount__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>the amount paid out on the claim</description>
    <inlineHelpText>the amount paid out on the claim</inlineHelpText>
    <label>Settlement Amount</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>