force-app/main/default/objects/Claim__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Incident_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Injury_Type__c</columns>
    <columns>Is_High_Value__c</columns>
    <columns>Settlement_Amount__c</columns>
    <columns>Insurance_Provider__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>